--- a/.ackrc
+++ b/.ackrc
@@ -3,6 +3,7 @@
 
 # Python project settings
 --ignore-dir=.eggs/
+--ignore-dir=.mypy_cache/
 --ignore-dir=.tox/
 --ignore-dir=build/
 --ignore-dir=cover/
