--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,16 @@
 *
 !microcosm_daemon
-microcosm_daemon/test*
+microcosm_daemon/tests
 !dist/*-none-any.whl
 !entrypoint.sh
 !MANIFEST.in
 !README.md
-!requirements.txt
+!HISTORY.rst
+!requirements*.txt
 !setup.py
 !setup.cfg
+!mypy.ini
+!pyproject.toml
+!conftest.py
 **/*.pyc
 **/*~
-
