Configure repo to publish to PyPI
Update globality-build config and regenerate build files to allow
package to be published to PyPI.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 max-line-length = 120
 max-complexity = 15
-exclude = .eggs/*,*/migrations/*
+exclude = */migrations/*,.eggs/*
 
 [isort]
 combine_as_imports = True
@@ -29,6 +29,7 @@ cover-erase = True
 addopts =
     --cov microcosm_daemon
     --cov-report xml:microcosm_daemon/tests/coverage/cov.xml
+    --junitxml=microcosm_daemon/tests/test-results/pytest/junit.xml
 
 [coverage:report]
 show_missing = True
