--- a/.gitignore
+++ b/.gitignore
@@ -73,12 +73,14 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .coverage
+coverage/
 .coverage.*
 .cache
 nosetests.xml
 coverage.xml
 *,cover
 cover
+test-results/
 
 # Translations
 *.mo
