--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -308,8 +308,9 @@ workflows:
             tags:
               only: /.*/
       - publish_library:
-          context: 
+          context:
           - Globality-Common
+          - Python-Context
           requires:
             - test
             - lint
